marketing site tweaks

--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -172,7 +172,7 @@
 			<div class="feature keychain">
 				<div class="title">Secure.</div>
 				<div class="description png_bg identical_height_block">
-				<p>The page you're looking at right now? It's secure.  Just like every page in GoodCloud. We've made the security and integrity of your data one of our key concerns, and you can rest well knowing you're in good hands. </p>
+				<p>The page you're looking at right now? It's secure, just like every page in GoodCloud. We've made the security and integrity of your data one of our key concerns, and you can rest well knowing you're in good hands. </p>
 
 				<p>All customer data is hosted in <a href="http://aws.amazon.com/security/" target="_blank">PCI DSS Level 1 datacenters</a>, and industry-standard practices are used throughout GoodCloud to ensure that your data is safe and secure.</p>
 				</div>
