--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -31,5 +31,5 @@
 
 
 <div class="clearfix"></div>
-
+<a href="{% url accounts:signup %}" class="page_action png_bg">Now, try it out yourself!</a>
 {% endblock %}
