made it so the footer actually showed in goodcloud

--- a/mycelium/apps/mycelium_core/static/css/mycelium_elements.css
+++ b/mycelium/apps/mycelium_core/static/css/mycelium_elements.css
@@ -232,9 +232,10 @@ main_content {
 
 }
 footer {
-	position: absolute;
+	position: fixed;
 	bottom: 6px;
-	width: 100%;
+	left: 0px;
+	width: 170px;
 
 }
 footer img {
