webinar link in footer

--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -20,6 +20,7 @@
 		<a href="{% url marketing_site:tour %}" class="top_link" >Tour</a>
 		<a href="{% url marketing_site:tour %}">Video Tour</a>
 		<a href="{% url marketing_site:screenshots %}">Screenshots</a>
+		<a href="{% url marketing_site:webinar %}">Webinars</a>
 	</td>
 	<td>
 		<a href="{% url marketing_site:legal %}" class="top_link" >Legal</a>
