--- a/mycelium/apps/donors/templates/donors/_donation_row.html
+++ b/mycelium/apps/donors/templates/donors/_donation_row.html
@@ -1,5 +1,7 @@
 {% load i18n generic_fields friendly_data_formatting humanize %}<tr class="striped_row donation_row">
 	<td class="amount">${{d.amount|intcomma}}</td>
 	<td class="date"> {{d.date|naturalday}}</td>
+	<td class="type"> {{d.get_type_display}}</td>
+	<td class="notes"> {{d.notes|clean_none}}</td>
 	<td class="delete_donation"><a href="{% url donors:delete_donation_from_people_tab d.pk %}" class="delete_donation_btn mycelium_delete_btn mycelium_active_grey mycelium_small_btn mycelium_btn">Delete Donation</a></td>	
 </tr>
