--- a/mycelium/apps/mycelium_core/static/css/people_donor.css
+++ b/mycelium/apps/mycelium_core/static/css/people_donor.css
@@ -9,14 +9,48 @@ tab_contents.people_donor_tab #new_donation .sentence input {
 tab_contents.people_donor_tab #new_donation .sentence select {
 	margin: 0px 0.5em;
 }
-tab_contents.people_donor_tab #new_donation .duration input {
-/*	min-width: 50px;*/
+tab_contents.people_donor_tab #new_donation .amount input {
+	min-width: 50px;
 }
 tab_contents.people_donor_tab #new_donation .sentence_fragment {
 	font-size: 18px;
 	bottom: -3px;
 	position: relative;
 	display: inline-block;	
+}
+
+tab_contents.people_donor_tab #new_donation .donation_details {
+	display: block;
+	padding: 4px 10px;
+	margin-top: 10px;
+}
+
+tab_contents.people_donor_tab #new_donation #id_in_memory_of { 
+	margin-left: 20px;
+}
+tab_contents.people_donor_tab #new_donation .honorarium label {
+	font-size: 16px;
+	padding: 0px 1px 0px 6px;
+	color: #888;
+	position: relative;
+	bottom: -1px;
+}
+tab_contents.people_donor_tab #new_donation .honorarium_name .sentence_fragment {
+	bottom: -1px;
+}
+
+tab_contents.people_donor_tab #new_donation .in_honor_of.checked label, tab_contents.people_donor_tab #new_donation .in_memory_of.checked label {
+	color: #222;
+}
+
+tab_contents.people_donor_tab #new_donation .honorarium_name, tab_contents.people_donor_tab #new_donation .honorarium_name .sentence_fragment {
+	font-size: 16px;
+}
+
+tab_contents.people_donor_tab #new_donation .honorarium_name input {
+	min-width: 140px;
+	text-align: left;
+	font-size: 16px;
 }
 tab_contents.people_donor_tab .donor_donation_table {
 	width: 100%;
@@ -30,8 +64,33 @@ tab_contents.people_donor_tab .donor_donation_table .year_of_donations {
 	display: none;
 }
 tab_contents.people_donor_tab .donor_donation_table tr.donation_row td {
-	padding-left: 10px;
+	padding: 4px 0px 4px 10px;
 }
+tab_contents.people_donor_tab .donor_donation_table tr.donation_row td.amount 	 		{	width: 15%;	 }
+tab_contents.people_donor_tab .donor_donation_table tr.donation_row td.date 	 		{	width: 15%;	 }
+tab_contents.people_donor_tab .donor_donation_table tr.donation_row td.type 	 		{	width: 10%;	 }
+tab_contents.people_donor_tab .donor_donation_table tr.donation_row td.notes 	 		{	width: 50%;	 }
+tab_contents.people_donor_tab .donor_donation_table tr.donation_row td.delete_donation 	{	width: 10%;	 }
+tab_contents.people_donor_tab .donor_donation_table tr.donation_row td.notes {
+	padding: 2px 0px 0px 10px;
+}
+tab_contents.people_donor_tab .donor_donation_table tr.donation_row td.notes .notes_icon {	
+	display: block;
+	background: url("../images/icon-notes-grey-18.png");
+	background-repeat: no-repeat;
+	width: 20px;
+	height: 20px;
+	padding: 0px;
+	cursor: pointer;
+}
+tab_contents.people_donor_tab .donor_donation_table tr.donation_row td.notes .notes_body {	
+	display: none;
+}
+
+
+
+
+
 tab_contents.people_donor_tab .year_of_donor_donations_table {
 	margin: 6px 1%;
 	width: 98%;
@@ -87,5 +146,6 @@ tab_contents.people_donor_tab #id_notes {
 tab_contents.people_donor_tab .notes_label {
 	float: left;
 	margin-right: 10px;
+	font-size: 16px;
 
 }
