--- a/mycelium/apps/donors/templates/donors/_people_donor_tab.html
+++ b/mycelium/apps/donors/templates/donors/_people_donor_tab.html
@@ -14,14 +14,27 @@
 			<span class="sentence_fragment">Add a</span>
 			<span class="type">{{donation_form.type}}</span> 
 			<span class="sentence_fragment"> donation of $</span>
-			<span class="duration">{{donation_form.amount}}</span> 
+			<span class="amount">{{donation_form.amount}}</span> 
 			<span class="sentence_fragment">on</span>
 			<span class="date">{{donation_form.date}}</span> 
 			<span class="sentence_fragment">. </span>
 			</div>
+			<div class="donation_details">
+			<div class="sentence honorarium">
+			<span class="in_honor_of">{{donation_form.in_honor_of}}<label for="id_in_honor_of">In Honor</label></span> 
+			<span class="in_memory_of">{{donation_form.in_memory_of}}<label for="id_in_memory_of">In Memory</label></span> 
+			
+			<span class="honorarium_fragment">
+				<span class="honorarium_name">
+					<span class="sentence_fragment">of </span>
+					<span class="sentence_fragment honorarium_name_fragment">{{donation_form.honorarium_name}}</span>
+				</span>
+			</span>
+			</div>
 			<div class="sentence notes_sentence">
 			<span class="sentence_fragment notes_label">Notes:</span>
 			{{donation_form.notes}}
+			</div>
 			</div>
 		</span>
 
