--- a/mycelium/apps/generic_tags/templates/generic_tags/manage.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/manage.html
@@ -9,6 +9,16 @@
 {% generic_tags_js %}
 {% js "/js/mycelium/people_common.js" %}
 {% js "/js/mycelium/manage_tags.js" %}
+<script>
+$(function(){
+	
+{% for ts in all_tagsets %}
+manageTags.state.tag_sets.append(manageTags.objects.tagSet({{ts.pk}}, "{{ts.name}}", {{ts.order}});
+{% for t in ts.tag_set.all %}manageTags.state.tag_sets.tags.append(manageTags.objects.tag({{t.pk}}, "{{t.name}}", {{t.order}}, {{t.num_members}});
+{% endfor %}{% endfor %}
+
+});
+</script>
 {% endblock %}
 
 {% block breadcrumb %}{% endblock %}
@@ -24,8 +34,41 @@
 	</span>
 	</save_status_and_button>
 
-<fragment name="tagset_details" action="replace">
-	{% include "generic_tags/_manage_tags_tagset_details.html" %}
+<div id="tagset_form">
+
+
+	<tagset>
+		<div class="detail_header">
+			<div class="header_actions">
+				<a href="{% url generic_tags:delete_tagset ts.pk %}" class="delete_tagset_btn mycelium_btn mycelium_delete_btn mycelium_active_grey mycelium_small_btn">Delete Tag Category</a>
+			</div>
+			{% generic_editable_field ts.form.name %}
+		</div>
+		<table class="tag_list striped">
+		{% for t in ts.all_tags_and_counts_with_form %}
+			{% with t.tag.form as t_form %}
+			<tr class="striped_row tag_row">
+				<td class="tag_name">{% generic_editable_field t_form.name %}</td>
+				<td class="num_people"><span class="count">{{t.num_people|intcomma}}</span> 
+					{# {% if t.num_people == 1 %}person{% else %}people{% endif %} #}
+					people
+				</td>
+				<td class="tag_actions">
+					<a href="{% url generic_tags:delete_tag t.tag.pk %}" class="delete_tag_btn mycelium_btn mycelium_delete_btn mycelium_active_grey mycelium_small_btn">Delete Tag</a>
+				</td>
+			</tr>
+			{% endwith %}
+		{% endfor %}
+		</table>
+		<form_actions>
+		<a href="{% url generic_tags:new_tag ts.pk %}" class="mycelium_btn mycelium_small_btn add_a_tag_btn auto_disable" disabled_text="Adding...">Add a Tag</a>
+		</form_actions>
+	</tagset>
+
+	<form_actions>
+		<a href="{% url generic_tags:new_tagset %}" class="mycelium_btn add_a_category_btn auto_disable" disabled_text="Adding...">Add a Category</a>
+	</form_actions>
+
 </fragment>
 </form>
 {% endblock %}
