--- a/mycelium/apps/mycelium_core/static/css/mycelium_tags.css
+++ b/mycelium/apps/mycelium_core/static/css/mycelium_tags.css
@@ -49,8 +49,38 @@ tagset .tag_list .num_people .count	{
 	margin: 0px;
 }
 .manage_tags .edit_mode_on .detail_header .edit_field {
-	margin-bottom: 5px;
+	margin-bottom: 0px;
 }
+.manage_tags tagset li {
+	list-style-type: none;
+}
+.manage_tags instructions {
+	display: block;
+	padding: 10px 15px;
+	color: #999;
+}
+.manage_tags .tag_drag_icon, .manage_tags .tagset_drag_icon {
+	width: 12px;
+	height: 14px;
+	background: url("../images/icon-move-grey-12.png");
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
+	float: left;
+	margin-right: 5px;
+	opacity:0.2;
+	filter:alpha(opacity=20);
+}
+.manage_tags li:hover .tag_drag_icon, .manage_tags .detail_header:hover .tagset_drag_icon {
+	opacity:1;
+	filter:alpha(opacity=100)	
+}
+
+.manage_tags .tagset_drag_icon {
+	width: 18px;
+	height: 33px;
+	background-image: url("../images/icon-move-grey-18.png");
+}
+
 .detail_header, .detail_header input {
 	font-size: 24px;
 }
