--- a/mycelium/apps/generic_tags/templates/generic_tags/manage.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/manage.html
@@ -13,9 +13,10 @@
 $(function(){
 
 {% for ts in all_tagsets %}{% with forloop.counter as ts_counter %}
-manageTags.state.tag_sets.push(manageTags.objects.tagSet("{{ts.name}}", {{ts.order}}));
-{% for t in ts.tag_set.all %}{% with forloop.counter as tag_counter %}manageTags.state.tag_sets[{{ts_counter|add:-1}}].tags.push(manageTags.objects.tag(manageTags.state.tag_sets[{{ts_counter|add:-1}}], "{{t.name}}", {{t.order}}, {{t.num_members}}));
+manageTags.state.tag_sets.push(manageTags.objects.tagSet("{{ts.name}}", {{ts.order}}, {{ts.pk}}));
+{% for t in ts.tag_set.all %}{% with forloop.counter as tag_counter %}manageTags.state.tag_sets[{{ts_counter|add:-1}}].tags.push(manageTags.objects.tag(manageTags.state.tag_sets[{{ts_counter|add:-1}}], "{{t.name}}", {{t.order}}, {{t.num_members}}, {{t.pk}}));
 {% endwith %}{% endfor %}{% endwith %}{% endfor %}
+manageTags.encyclopedia.urls.save_tags_and_tagsets = "{% url generic_tags:save_tags_and_tagsets %}";
 
 manageTags.init();
 });
@@ -26,7 +27,7 @@ manageTags.init();
 {% block page_content %}
 <page_title>Manage Tags</page_title>
 <instructions>Changes will auto-save.  Drag and drop to reorder.</instructions>
-<form action="{% url generic_tags:save_tags_and_tagsets %}" class="edit_mode_on" id="basic_info_form" method="POST">{% csrf_token %}
+<form action="{% url generic_tags:save_tags_and_tagsets %}" class="edit_mode_on" method="POST">{% csrf_token %}
 	<save_status_and_button>
 	<a href="#" class="mycelium_btn save_and_status_btn mycelium_grey" >Saved</a>
 	<span class="save_info">
