tests passing with new manage tags page.

--- a/mycelium/apps/groups/templates/groups/_group_member_list.html
+++ b/mycelium/apps/groups/templates/groups/_group_member_list.html
@@ -1,5 +1,5 @@
 <table class="striped members_table">
-{% for p in members %}
+{% for p in group_members %}
 	{{p.search_result_row|safe}}
 {% endfor %}
 </table>
