recent convos tied into apps, added to flight control

--- a/mycelium/apps/mycelium_core/static/css/flight_control.css
+++ b/mycelium/apps/mycelium_core/static/css/flight_control.css
@@ -191,10 +191,11 @@ average {
 	margin: 0px auto;
 }
 .info_block .when {
-	display: block;
-	margin-left: 10px;
+	/*display: block;*/
+	/*margin-left: 10px;*/
 	color: #999;
 }
+
 .info_block {
 	display: block;
 	padding: 3px 5px;
