updated marketing site with blurbs on getting your data out, and legal source code release

--- a/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/about_us.html
@@ -60,6 +60,7 @@
 		<div class="person tom png_bg">
 			<div class="person_name">Tom Noble</div>
 			<div class="title">Co-Founder, Relationship-builder.</div>
+			<div class="location">Phoenix, AZ</div>
 			<div class="contact_info">
 				{# <span class="bio"><a href="#" class="bio_link">Bio</a></span> #}
 				<span class="blog"><a href="http://goodcloud.posterous.com/tag/tom">Blog</a></span>
@@ -78,6 +79,7 @@
 		<div class="person steven png_bg">
 			<div class="person_name">Steven Skoczen</div>
 			<div class="title">Co-Founder, Software-maker.</div>
+			<div class="location">Portland, OR</div>
 			<div class="contact_info">
 				{# <span class="bio"><a href="#" class="bio_link">Bio</a></span> #}
 				<span class="blog"><a href="http://goodcloud.posterous.com/tag/steven">Blog</a></span>
