--- a/mycelium/apps/marketing_site/templates/marketing_site/features.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/features.html
@@ -15,6 +15,7 @@
 	 	<li><a href="#less_computer_time">Less computer-time</a></li>
 	 	<li><a href="#keeps_improving">Keeps getting better</a></li>
 	 	<li><a href="#secure">Safe and secure</a></li>
+	 	<li><a href="#no_lock_in">No lock-in</a></li>
  	</ul>
 
 	<div class="tab_content company" id="everything_in_one_place">
@@ -187,7 +188,30 @@
 			</div>
 
 
-	</div>		
+	</div>
+
+	<div class="tab_content company" id="no_lock_in">
+		
+		<div class="page_top_hook">It's your data.</div>
+
+			<div class="feature export">
+				<div class="title">Full data export.</div>
+				<div class="description png_bg identical_height_block">
+					<p>Deciding where to keep your organization's data is a critical decision.  While some services only export to arcane formats, GoodCloud allows you to download everything into spreadsheets that you can take anywhere.</p>
+					<p>Data lock-in is an unethical practice. We'll always make sure you can get out what you put in.</p>
+				</div>
+			</div>
+
+			
+			<div class="feature map">
+				<div class="title">We even included a parachute.</div>
+				<div class="description png_bg identical_height_block">
+					<p>There are a lot of worries when you choose someone to keep all your data. Since we're pretty new, we'll put the big one out on the table: <i>what if they go out of business?</i>  Well, in that unlikely event, we'll release the entire GoodCloud codebase under an open-source license, so geeks out there can keep it running for you.</p>
+					<p>When we say we're serious about making sure you can get to your data, it's more than just talk.</p>
+				</div>
+			</div>
+	</div>	
+
 </div>
 
 <a href="{% url accounts:signup %}" class="page_action png_bg">Try GoodCloud for Free!</a>
