--- a/mycelium/apps/marketing_site/templates/marketing_site/legal.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/legal.html
@@ -101,6 +101,10 @@
 		<li>We reserve the right to modify or terminate your Service for any reason, without notice at any time.</li>
 		</ul>
 
+		<h3>Release of Source Code</h3>
+		<ul>
+		<li>If GoodCloud goes out of business or entirely discontinues providing the Service, they agree to release all of the company-owned source code responsible for the Service under an open-source license.  Third-party libraries used by such code are not under GoodCloud's license, and not subject to the previous clause.</li>
+		</ul>
 
 		<h3>Entire Agreement</h3>
 
